v0.15.0/_sources/generated/statsmodels.tsa.arima.model.ARIMAResults.rst.txt
statsmodels.tsa.arima.model.ARIMAResults
========================================

.. currentmodule:: statsmodels.tsa.arima.model

.. autoclass:: ARIMAResults
   :exclude-members: append,apply,conf_int,cov_params,extend,f_test,forecast,get_forecast,get_prediction,get_smoothed_decomposition,impulse_responses,info_criteria,initialize,load,news,normalized_cov_params,plot_diagnostics,predict,remove_data,save,simulate,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ARIMAResults.append
      ~ARIMAResults.apply
      ~ARIMAResults.conf_int
      ~ARIMAResults.cov_params
      ~ARIMAResults.extend
      ~ARIMAResults.f_test
      ~ARIMAResults.forecast
      ~ARIMAResults.get_forecast
      ~ARIMAResults.get_prediction
      ~ARIMAResults.get_smoothed_decomposition
      ~ARIMAResults.impulse_responses
      ~ARIMAResults.info_criteria
      ~ARIMAResults.initialize
      ~ARIMAResults.load
      ~ARIMAResults.news
      ~ARIMAResults.normalized_cov_params
      ~ARIMAResults.plot_diagnostics
      ~ARIMAResults.predict
      ~ARIMAResults.remove_data
      ~ARIMAResults.save
      ~ARIMAResults.simulate
      ~ARIMAResults.summary
      ~ARIMAResults.t_test
      ~ARIMAResults.t_test_pairwise
      ~ARIMAResults.test_heteroskedasticity
      ~ARIMAResults.test_normality
      ~ARIMAResults.test_serial_correlation
      ~ARIMAResults.wald_test
      ~ARIMAResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ARIMAResults.aic
      ~ARIMAResults.aicc
      ~ARIMAResults.arfreq
      ~ARIMAResults.arparams
      ~ARIMAResults.arroots
      ~ARIMAResults.bic
      ~ARIMAResults.bse
      ~ARIMAResults.cov_params_approx
      ~ARIMAResults.cov_params_oim
      ~ARIMAResults.cov_params_opg
      ~ARIMAResults.cov_params_robust
      ~ARIMAResults.cov_params_robust_approx
      ~ARIMAResults.cov_params_robust_oim
      ~ARIMAResults.fittedvalues
      ~ARIMAResults.hqic
      ~ARIMAResults.llf
      ~ARIMAResults.llf_obs
      ~ARIMAResults.loglikelihood_burn
      ~ARIMAResults.mae
      ~ARIMAResults.mafreq
      ~ARIMAResults.maparams
      ~ARIMAResults.maroots
      ~ARIMAResults.mse
      ~ARIMAResults.pvalues
      ~ARIMAResults.resid
      ~ARIMAResults.seasonalarparams
      ~ARIMAResults.seasonalmaparams
      ~ARIMAResults.sse
      ~ARIMAResults.states
      ~ARIMAResults.tvalues
      ~ARIMAResults.use_t
      ~ARIMAResults.zvalues
   
   
   